@@ -22,6 +22,7 @@
 		"(?) exotic-industries >= 0.4.2",
 		"(?) Krastorio2 >= 1.3.19",
 		"? Milestones >= 1.4.4",
+		"? nanobots-refined >= 4.0.5",
 		"? pyalienlife >= 2.1.38",
 		"? pyalternativeenergy >= 1.2.32",
 		"? pycoalprocessing >= 2.1.28",
@@ -53,6 +54,8 @@
 		"(?) SeaBlockMetaPack",
 		"(?) TeleportationEquipment >= 1.0.11",
 		"! Early-Armor-Grid",
+		"! Nanobots",
+		"! Nanobots2",
 		"! Gregtorio",
 		"! Moar-Grid",
 		"! nullius"
