@@ -37,6 +37,7 @@ Date: 06.06.2025
     - Bobs tech soft lock bob-carbon. in combination with Alt_Chemical_Processing.
     - Fixed many spelling errors across the Changelog.
     - Recipe issues from 1.1 (mod version 0.2.xx)
+    - Added Nanobots Refined to the compatibility. Made the old ones incompatible.
   Info:
     - Note that this version are not fully finished & beta versions are available at my discord server.
     - Your are welcome to try it and give feedback on what's there. I don't want reports about uncompleted Features. (Example: thee settings are missing)
